--- a/DemoApp.csproj
+++ b/DemoApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Playwright" Version="1.54.0" />
+    <PackageReference Include="PDFsharp" Version="6.2.1" />
   </ItemGroup>
 
 </Project>
